<resources>
    <string name="app_name">first1</string>
    <string name="hobbiestext">Table tennis (also known as ping-pong or whiff-whaff) is a racket sport derived from tennis but distinguished by its playing surface being atop a stationary table, rather than the court on which players stand. Either individually or in teams of two, players take alternating turns returning a light, hollow ball over the table\'s net onto the opposing half of the court using small rackets until they fail to do so, which results in a point for the opponent. Play is fast, requiring quick reaction and constant attention, and is characterized by an emphasis on spin relative to other ball sports, which can heavily affect the ball\'s trajectory</string>
    <string name="hobbies">Hobbies</string>
    <string name="add">Add</string>
    <string name="enter_hobbies">Enter Hobbies</string>
    <string name="qais_ayyash">Qais Ayyash</string>
</resources>